public/css/post.css
#content {
    display: flex;
    margin-top: 25px;
}

#left {
    margin-left: 40px;
    width: 1000px;
}

#right{
    float: right;
    padding: 10px;
    margin-left: 100px;
    top: 200px;
}

#right > img {
    max-height: 500px;
    max-width: 500px;
    margin: 40px 70px 0 0;
}

#editcomment, #createcomment {
    margin: 50px 0 0 600px;
}

#createcommentbox {
    resize: none;
}

#editcommentbox {
    resize: none;
    margin-bottom: 10px;
}

#headerEdit {
    margin-bottom: 10px;
}

#button {
    background-color: #00916E; 
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 0 0 0 200px;
}

#button:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

#bottom {
    padding: 10px;
    border: 5px solid black;
    width: 1000px;
    height: 350px;
    margin-top: 50px;
    margin-left: 400px;
    margin-bottom: 50px;
    overflow: auto;
}

.commentbox {
    background-color: #F2DD6E;
    padding: 10px 10px 10px 10px;
    margin-bottom: 10px;
    border-style: solid;
    border-radius: 10px;
    border-color: #F2DD6E;
    word-wrap: break-word;
}

.center {
    margin: auto;
    width: 60%;
    padding: 20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.hideform {
    display: none;
}

span.datetime {
    margin-left: 6px;
    font: Arial;
    font-size: 12px;
    color: #998;
    font-weight: normal;
}

li {
    list-style-type: none;
   }

